# azure_hackathon_scoring_api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  bitbucket-pipelines.yml  file.crypt  main.py  pyproject.toml
core/: config.py
example/: accuracy_score_usage.ipynb
hackathon_scoring_api/: main.py
hackathon_scoring_api/core/: config.py  log.py
hackathon_scoring_api/models/: score_input.py
hackathon_scoring_api/routers/: score.py
hackathon_scoring_api/services/: adls.py  identity.py  key_vault.py
notebooks/: accuracy_score_usage.ipynb  encrypt_dataframe.ipynb
routers/: score.py
services/: adls.py  key_vault.py
tests/: file.crypt  test_main.py  test_score.py
