[tool.poetry]
name = "hackathon-scoring-api"
version = "0.1.0"
description = ""
authors = ["Basile EL AZHARI <basile.elazhari@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
types-requests = "^2.31.0.20240406"
pydantic = "^2.3.1"
pydantic-settings = "^2.0.3"
pandas = "^1.5.2"
fastapi = {version = "^0.103.2", extras = ["all"]}
azure-storage-blob = "^12.18.3"
azure-identity = "^1.14.1"
azure-keyvault-secrets = "^4.7.0"
jupyter = "^1.0.0"
CryptPandas = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"
dotenv-cli = "^3.2.2"
python-dotenv = "^1.0.1"
jupyter = "^1.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.0"
pytest-mock = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
exclude_dirs = ["**/test_*.py", "*/test_*.py"]
tests = ["B201", "B301"]
skips = ["B101", "B601"]
